--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,7 @@
     "mongoose": "^7.8.7",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
-    "twilio": "^3.77.0",
-    
+    "twilio": "^3.77.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
